# uigaze

./: .gitignore  FULL_RESULTS.md  LICENSE  PILOT_RESULTS.md  README.md  main.py  pyproject.toml
experiments/: fill_missing.py  regenerate.py  run_full.py  run_pilot.py  run_single.py
results/: raw_results.csv  summary_by_category.csv  summary_by_model.csv
results/full/1s/: per_image_avg.csv  summary_by_category.csv  summary_by_model.csv
results/full/1s/raw/: claude-opus-4.6.csv  claude-sonnet-4.6.csv  gemini-3.1-flash-lite.csv  gemini-3.1-pro.csv  gpt-5.4-mini.csv  gpt-5.4.csv  qwen-3.5-flash.csv  qwen-3.5-plus.csv  ui-tars-1.5.csv
results/full/3s/: per_image_avg.csv  summary_by_category.csv  summary_by_model.csv
results/full/3s/raw/: claude-opus-4.6.csv  claude-sonnet-4.6.csv  gemini-3.1-flash-lite.csv  gpt-5.4-mini.csv  (+5 more)
results/full/7s/: per_image_avg.csv  summary_by_category.csv  summary_by_model.csv
results/pilot/: per_image_avg.csv  summary_by_category.csv  summary_by_model.csv
results/pilot/1s/: per_image_avg.csv  summary_by_category.csv  summary_by_model.csv
results/pilot/3s/: per_image_avg.csv  summary_by_category.csv  summary_by_model.csv
results/pilot/7s/: per_image_avg.csv  summary_by_category.csv  summary_by_model.csv
results/pilot/raw/: claude-opus-4.6.csv  claude-sonnet-4.6.csv  gemini-3.1-flash-lite.csv  gemini-3.1-pro.csv  gpt-5.4-mini.csv  gpt-5.4.csv  qwen-3.5-plus.csv
scripts/: download_data.sh
src/: data_loader.py
src/analysis/: visualizer.py
src/metrics/: evaluator.py
src/saliency/: generator.py
src/vlm/: openrouter.py
(+54842 files in other folders)
