[project]
name = "uigaze"
version = "0.1.0"
description = "Benchmarking VLM saliency prediction on user interfaces"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy>=1.26",
    "scipy>=1.12",
    "scikit-image>=0.22",
    "pillow>=10.0",
    "matplotlib>=3.8",
    "pandas>=2.1",
    "openrouter>=0.9.1",
]
